--- a/lesson3.ipynb
+++ b/lesson3.ipynb
@@ -23,6 +23,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "-5\n",
+      "50\n",
+      "3.3333333333333335\n",
+      "3\n",
+      "27\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (5 + 10)\n",
+    "print (5 - 10)\n",
+    "print (5 * 10)\n",
+    "print (10 / 3)\n",
+    "print (10 // 3)\n",
+    "print (3 ** 3)\n",
+    "print (10 % 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
