--- a/lesson3_1.ipynb
+++ b/lesson3_1.ipynb
@@ -2,23 +2,90 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "20"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "2 * (1 + 2) ** 2 - 2 ** 2 * 2"
+    "2 * (1 + 2) ** 2 - 2 ** 2 * 2\n",
+    "(2+3)*4"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(2 * (1 + 2) ** 2 - 2 ** 2 * 2)\n",
+    "print((2+3)*4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 1 + 5\n",
+    "m = n + 5\n",
+    "\n",
+    "print(n + m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = input ('請輸入x的值：')\n",
+    "#print ('x = '+ x)\n",
+    "print(type(x))\n",
+    "result = float(x) + 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -37,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
