--- a/lesson3_1.ipynb
+++ b/lesson3_1.ipynb
@@ -82,10 +82,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 7 8.0 hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "radius = float(input(\"請輸入半徑： \"))\n",
+    "# print(*objects, sep='', end='\\n', file=None, flush=False)\n",
+    "# \"*\" 代表沒有限制數量的引數值\n",
+    "# 5組參數，後面4組有預設值\n",
+    "print(4, 7, 8.0, 'hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4-7-8.0-hello.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(4,\n",
+    "      7,\n",
+    "      8.0,\n",
+    "      'hello', sep='-', end='.\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4-7-8.0-hello.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(4,\n",
+    "      7,\n",
+    "      8.0,\n",
+    "      'hello', end='.\\n', sep='-')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3+5+8\n",
+      "4+5+9\n",
+      "\n",
+      "9+9=18\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"3+5+8\")\n",
+    "print(\"4+5+9\")\n",
+    "print()\n",
+    "print(\"9+9=18\")"
+   ]
   }
  ],
  "metadata": {
