--- a/lesson3_1.ipynb
+++ b/lesson3_1.ipynb
@@ -163,6 +163,247 @@
     "print()\n",
     "print(\"9+9=18\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "半徑： 56.78\n",
+      "直徑： 113.56\n",
+      "圓周長： 356.75926229926\n",
+      "面積： 10128.395456675991\n"
+     ]
+    }
+   ],
+   "source": [
+    "radius = float(input(\"請輸入半徑： \"))\n",
+    "diameter = 2 * radius\n",
+    "circumference = 2 * 3.1415926585 * radius\n",
+    "area = 3.1415926585 * radius ** 2\n",
+    "\n",
+    "print(\"半徑：\", radius)\n",
+    "print(\"直徑：\", diameter)\n",
+    "print(\"圓周長：\", circumference)\n",
+    "print(\"面積：\", area)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "對邊： 3.0\n",
+      "鄰邊： 4.0\n",
+      "斜邊： 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "side = float(input(\"請輸入對邊：\"))\n",
+    "another_side = float(input(\"請輸入鄰邊：\"))\n",
+    "each_side = math.sqrt(side ** 2 + another_side ** 2)\n",
+    "print(\"對邊：\", side)\n",
+    "print(\"鄰邊：\", another_side)\n",
+    "print(\"斜邊：\", each_side)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "# pip install numpy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "數據集 [2 4 4 4 5 5 7 9]\n",
+      "標準差 2.0\n",
+      "樣本標準差 2.138089935299395\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "data = np.array([2, 4, 4, 4, 5, 5, 7, 9])\n",
+    "\n",
+    "std_dev = np.std(data)\n",
+    "print(\"數據集\", data)\n",
+    "print(\"標準差\", std_dev)\n",
+    "\n",
+    "sample_std = np.std(data, ddof=1)\n",
+    "print(\"樣本標準差\", sample_std)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# python 的內建資料結構\n",
+    "# list\n",
+    "# tuple(暫時包在一起的值)\n",
+    "# dict(dictionary)\n",
+    "# set(集合)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lucky_number = [2, 8, 9] #list\n",
+    "type(lucky_number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(lucky_number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(2, 8, 9)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tuple的符號建立 (暫時包在一起的值，不可變更修改)\n",
+    "lucky_number1 = (2, 8, 9)\n",
+    "print(type(lucky_number1))\n",
+    "lucky_number1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lucky_number[0])\n",
+    "print(lucky_number[1])\n",
+    "print(lucky_number[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30]\n",
+      "[10, 20, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lucky_number)\n",
+    "lucky_number[0] = 10\n",
+    "lucky_number[1] = 20\n",
+    "lucky_number[2] = 30\n",
+    "print(lucky_number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[67, 87, 92, 69, 92]\n",
+      "[89, 76, 92, 76, 89]\n"
+     ]
+    }
+   ],
+   "source": [
+    "students = [\n",
+    "    [67, 87, 92, 69, 92],\n",
+    "    [89, 76, 92, 76, 89]\n",
+    "]\n",
+    "print(students[0])\n",
+    "print(students[1])"
+   ]
   }
  ],
  "metadata": {
