--- a/lesson3_1.ipynb
+++ b/lesson3_1.ipynb
@@ -404,6 +404,95 @@
     "print(students[0])\n",
     "print(students[1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# list\n",
+    "numbers = [1, 2, 3, 4, 5] #使用符號建立\n",
+    "mixed_list = [1, \"Hello\", 3.14, True] #員素值可以不同資料類型\n",
+    "empty_list= []\n",
+    "list_from_range = list(range(5))\n",
+    "list_from_range # = display(list_from_range)  (only for ipynb)\n",
+    "\n",
+    "#list 的操作\n",
+    "list_from_range[4] #subscript\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 7, 9]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(5)\n",
+    "range(1, 5)\n",
+    "list(range(1, 10, 2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_list = list(range(1, 10, 2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[67, 96]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "empty_list =[]\n",
+    "empty_list.append(67)\n",
+    "empty_list.append(96)\n",
+    "empty_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
