--- a/lesson3_2.ipynb
+++ b/lesson3_2.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -242,18 +242,18 @@
      "output_type": "stream",
      "text": [
       "0->蘋果\n",
-      "===============\n",
+      "================\n",
       "1->香蕉\n",
-      "===============\n",
+      "================\n",
       "2->橘子\n",
-      "===============\n"
+      "================\n"
      ]
     }
    ],
    "source": [
     "for index, fruit in enumerate(fruits):\n",
     "    print(index, fruit, sep='->')\n",
-    "    print(\"===============\");"
+    "    print(\"================\");"
    ]
   }
  ],
