--- a/lesson3_2.ipynb
+++ b/lesson3_2.ipynb
@@ -255,6 +255,46 @@
     "    print(index, fruit, sep='->')\n",
     "    print(\"================\");"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Taipei: 台北\n",
+      "Kaohsiung: 高雄\n",
+      "Taichung: 台中\n",
+      "Tainan: 台南\n",
+      "Hsinchu: 新竹\n",
+      "Keelung: 基隆\n",
+      "Chiayi: 嘉義\n",
+      "Changhua: 彰化\n",
+      "Pingtung: 屏東\n",
+      "Yilan: 宜蘭\n"
+     ]
+    }
+   ],
+   "source": [
+    "cities = {\n",
+    "    \"Taipei\": \"台北\",\n",
+    "    \"Kaohsiung\": \"高雄\",\n",
+    "    \"Taichung\": \"台中\",\n",
+    "    \"Tainan\": \"台南\",\n",
+    "    \"Hsinchu\": \"新竹\",\n",
+    "    \"Keelung\": \"基隆\",\n",
+    "    \"Chiayi\": \"嘉義\",\n",
+    "    \"Changhua\": \"彰化\",\n",
+    "    \"Pingtung\": \"屏東\",\n",
+    "    \"Yilan\": \"宜蘭\"\n",
+    "}\n",
+    "\n",
+    "for key, value in cities.items():\n",
+    "    print(f\"{key}: {value}\")\n"
+   ]
   }
  ],
  "metadata": {
