--- a/lesson5_3.ipynb
+++ b/lesson5_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -13,7 +13,7 @@
        "       [59, 92, 87]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['趙家豪', '孫火清', '李政成', '林群清', '林思賢']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "def get_names(nums:int=10)->list[str]:\n",
+    "    with open(\"names.txt\", encoding=\"utf-8\") as file:\n",
+    "        content = file.read()\n",
+    "        #print(content)\n",
+    "        names = content.split(\"\\n\")\n",
+    "        random_names = random.sample(names, nums)\n",
+    "        print(random_names)\n",
+    "\n",
+    "\n",
+    "get_names(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -139,469 +167,67 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>92</td>\n",
+       "      <td>81</td>\n",
+       "      <td>98</td>\n",
+       "      <td>53</td>\n",
+       "      <td>60</td>\n",
        "      <td>82</td>\n",
-       "      <td>90</td>\n",
-       "      <td>65</td>\n",
-       "      <td>67</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>58</td>\n",
-       "      <td>73</td>\n",
-       "      <td>85</td>\n",
-       "      <td>53</td>\n",
-       "      <td>85</td>\n",
+       "      <td>78</td>\n",
+       "      <td>75</td>\n",
+       "      <td>86</td>\n",
+       "      <td>84</td>\n",
+       "      <td>96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>83</td>\n",
-       "      <td>97</td>\n",
-       "      <td>96</td>\n",
+       "      <td>59</td>\n",
+       "      <td>79</td>\n",
+       "      <td>99</td>\n",
        "      <td>57</td>\n",
-       "      <td>85</td>\n",
+       "      <td>59</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>64</td>\n",
-       "      <td>95</td>\n",
-       "      <td>69</td>\n",
-       "      <td>100</td>\n",
-       "      <td>64</td>\n",
+       "      <td>79</td>\n",
+       "      <td>71</td>\n",
+       "      <td>74</td>\n",
+       "      <td>67</td>\n",
+       "      <td>75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>88</td>\n",
-       "      <td>76</td>\n",
-       "      <td>69</td>\n",
-       "      <td>76</td>\n",
-       "      <td>71</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>65</td>\n",
-       "      <td>86</td>\n",
-       "      <td>94</td>\n",
-       "      <td>69</td>\n",
-       "      <td>86</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>61</td>\n",
-       "      <td>69</td>\n",
-       "      <td>98</td>\n",
-       "      <td>66</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>90</td>\n",
-       "      <td>61</td>\n",
-       "      <td>57</td>\n",
-       "      <td>86</td>\n",
-       "      <td>69</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>50</td>\n",
-       "      <td>59</td>\n",
-       "      <td>98</td>\n",
-       "      <td>67</td>\n",
-       "      <td>79</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>85</td>\n",
-       "      <td>61</td>\n",
-       "      <td>78</td>\n",
-       "      <td>65</td>\n",
-       "      <td>70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>55</td>\n",
-       "      <td>62</td>\n",
-       "      <td>87</td>\n",
-       "      <td>73</td>\n",
-       "      <td>56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>87</td>\n",
-       "      <td>75</td>\n",
-       "      <td>73</td>\n",
-       "      <td>75</td>\n",
-       "      <td>62</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>73</td>\n",
-       "      <td>66</td>\n",
-       "      <td>91</td>\n",
-       "      <td>62</td>\n",
-       "      <td>64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>73</td>\n",
-       "      <td>80</td>\n",
-       "      <td>58</td>\n",
-       "      <td>75</td>\n",
-       "      <td>74</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>71</td>\n",
-       "      <td>88</td>\n",
-       "      <td>100</td>\n",
-       "      <td>63</td>\n",
-       "      <td>51</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>80</td>\n",
-       "      <td>63</td>\n",
-       "      <td>52</td>\n",
-       "      <td>96</td>\n",
-       "      <td>77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>60</td>\n",
-       "      <td>87</td>\n",
        "      <td>68</td>\n",
-       "      <td>60</td>\n",
-       "      <td>92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>57</td>\n",
-       "      <td>70</td>\n",
-       "      <td>74</td>\n",
-       "      <td>98</td>\n",
-       "      <td>58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>62</td>\n",
-       "      <td>93</td>\n",
-       "      <td>94</td>\n",
-       "      <td>94</td>\n",
-       "      <td>77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>68</td>\n",
-       "      <td>86</td>\n",
-       "      <td>63</td>\n",
-       "      <td>53</td>\n",
-       "      <td>90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>78</td>\n",
-       "      <td>87</td>\n",
-       "      <td>90</td>\n",
-       "      <td>68</td>\n",
-       "      <td>50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>98</td>\n",
-       "      <td>62</td>\n",
-       "      <td>81</td>\n",
-       "      <td>57</td>\n",
-       "      <td>52</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>72</td>\n",
-       "      <td>58</td>\n",
-       "      <td>85</td>\n",
-       "      <td>80</td>\n",
-       "      <td>99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>54</td>\n",
-       "      <td>98</td>\n",
-       "      <td>92</td>\n",
-       "      <td>85</td>\n",
-       "      <td>63</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>50</td>\n",
-       "      <td>76</td>\n",
-       "      <td>86</td>\n",
-       "      <td>60</td>\n",
-       "      <td>89</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>98</td>\n",
-       "      <td>65</td>\n",
-       "      <td>77</td>\n",
-       "      <td>54</td>\n",
-       "      <td>91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>65</td>\n",
-       "      <td>57</td>\n",
-       "      <td>60</td>\n",
-       "      <td>60</td>\n",
-       "      <td>94</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>67</td>\n",
-       "      <td>83</td>\n",
-       "      <td>98</td>\n",
-       "      <td>57</td>\n",
-       "      <td>53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>56</td>\n",
-       "      <td>98</td>\n",
-       "      <td>61</td>\n",
-       "      <td>72</td>\n",
-       "      <td>73</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>74</td>\n",
-       "      <td>74</td>\n",
-       "      <td>65</td>\n",
-       "      <td>95</td>\n",
-       "      <td>71</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>74</td>\n",
-       "      <td>87</td>\n",
-       "      <td>91</td>\n",
-       "      <td>88</td>\n",
-       "      <td>55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>93</td>\n",
-       "      <td>57</td>\n",
-       "      <td>81</td>\n",
-       "      <td>79</td>\n",
-       "      <td>79</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>94</td>\n",
-       "      <td>98</td>\n",
-       "      <td>81</td>\n",
-       "      <td>85</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>59</td>\n",
-       "      <td>52</td>\n",
-       "      <td>88</td>\n",
-       "      <td>90</td>\n",
-       "      <td>81</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>77</td>\n",
-       "      <td>62</td>\n",
-       "      <td>85</td>\n",
-       "      <td>52</td>\n",
-       "      <td>55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>66</td>\n",
-       "      <td>66</td>\n",
-       "      <td>58</td>\n",
-       "      <td>56</td>\n",
-       "      <td>67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>100</td>\n",
-       "      <td>60</td>\n",
-       "      <td>88</td>\n",
        "      <td>75</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>80</td>\n",
-       "      <td>100</td>\n",
-       "      <td>96</td>\n",
-       "      <td>82</td>\n",
-       "      <td>62</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>87</td>\n",
-       "      <td>59</td>\n",
-       "      <td>87</td>\n",
-       "      <td>84</td>\n",
-       "      <td>66</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>54</td>\n",
-       "      <td>88</td>\n",
-       "      <td>66</td>\n",
-       "      <td>57</td>\n",
-       "      <td>51</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>53</td>\n",
-       "      <td>58</td>\n",
-       "      <td>58</td>\n",
-       "      <td>74</td>\n",
-       "      <td>86</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>75</td>\n",
-       "      <td>65</td>\n",
-       "      <td>93</td>\n",
-       "      <td>50</td>\n",
-       "      <td>57</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>55</td>\n",
-       "      <td>93</td>\n",
-       "      <td>92</td>\n",
-       "      <td>80</td>\n",
-       "      <td>72</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>58</td>\n",
-       "      <td>100</td>\n",
-       "      <td>72</td>\n",
-       "      <td>68</td>\n",
-       "      <td>67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>72</td>\n",
-       "      <td>60</td>\n",
-       "      <td>90</td>\n",
-       "      <td>90</td>\n",
-       "      <td>75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>53</td>\n",
-       "      <td>65</td>\n",
-       "      <td>78</td>\n",
-       "      <td>53</td>\n",
-       "      <td>66</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>95</td>\n",
-       "      <td>52</td>\n",
-       "      <td>62</td>\n",
-       "      <td>78</td>\n",
-       "      <td>89</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>99</td>\n",
-       "      <td>55</td>\n",
-       "      <td>95</td>\n",
-       "      <td>62</td>\n",
-       "      <td>50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>92</td>\n",
-       "      <td>78</td>\n",
-       "      <td>54</td>\n",
        "      <td>63</td>\n",
-       "      <td>84</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>94</td>\n",
-       "      <td>73</td>\n",
-       "      <td>67</td>\n",
-       "      <td>79</td>\n",
-       "      <td>72</td>\n",
+       "      <td>62</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     國文   英文   數學   地理   探討\n",
-       "0    92   82   90   65   67\n",
-       "1    58   73   85   53   85\n",
-       "2    83   97   96   57   85\n",
-       "3    64   95   69  100   64\n",
-       "4    88   76   69   76   71\n",
-       "5    65   86   94   69   86\n",
-       "6    61   69   98   66  100\n",
-       "7    90   61   57   86   69\n",
-       "8    50   59   98   67   79\n",
-       "9    85   61   78   65   70\n",
-       "10   55   62   87   73   56\n",
-       "11   87   75   73   75   62\n",
-       "12   73   66   91   62   64\n",
-       "13   73   80   58   75   74\n",
-       "14   71   88  100   63   51\n",
-       "15   80   63   52   96   77\n",
-       "16   60   87   68   60   92\n",
-       "17   57   70   74   98   58\n",
-       "18   62   93   94   94   77\n",
-       "19   68   86   63   53   90\n",
-       "20   78   87   90   68   50\n",
-       "21   98   62   81   57   52\n",
-       "22   72   58   85   80   99\n",
-       "23   54   98   92   85   63\n",
-       "24   50   76   86   60   89\n",
-       "25   98   65   77   54   91\n",
-       "26   65   57   60   60   94\n",
-       "27   67   83   98   57   53\n",
-       "28   56   98   61   72   73\n",
-       "29   74   74   65   95   71\n",
-       "30   74   87   91   88   55\n",
-       "31   93   57   81   79   79\n",
-       "32   94   98   81   85  100\n",
-       "33   59   52   88   90   81\n",
-       "34   77   62   85   52   55\n",
-       "35   66   66   58   56   67\n",
-       "36  100   60   88   75  100\n",
-       "37   80  100   96   82   62\n",
-       "38   87   59   87   84   66\n",
-       "39   54   88   66   57   51\n",
-       "40   53   58   58   74   86\n",
-       "41   75   65   93   50   57\n",
-       "42   55   93   92   80   72\n",
-       "43   58  100   72   68   67\n",
-       "44   72   60   90   90   75\n",
-       "45   53   65   78   53   66\n",
-       "46   95   52   62   78   89\n",
-       "47   99   55   95   62   50\n",
-       "48   92   78   54   63   84\n",
-       "49   94   73   67   79   72"
+       "   國文  英文  數學  地理  探討\n",
+       "0  81  98  53  60  82\n",
+       "1  78  75  86  84  96\n",
+       "2  59  79  99  57  59\n",
+       "3  79  71  74  67  75\n",
+       "4  88  68  75  63  62"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = np.random.randint(50,high=101,size=(50, 5))\n",
+    "import numpy as np\n",
+    "\n",
+    "student_nums = 5\n",
+    "data = np.random.randint(50,high=101,size=(student_nums, 5))\n",
     "students = pd.DataFrame(data,\n",
     "             columns=['國文','英文','數學','地理','探討'])\n",
     "students"
