--- a/lesson5_3.ipynb
+++ b/lesson5_3.ipynb
@@ -105,15 +105,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['趙家豪', '孫火清', '李政成', '林群清', '林思賢']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['黃婷婷', '彭偉妃', '錢佩豪', '黃翔杰', '沈心利']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -125,7 +128,9 @@
     "        #print(content)\n",
     "        names = content.split(\"\\n\")\n",
     "        random_names = random.sample(names, nums)\n",
-    "        print(random_names)\n",
+    "        #print(random_names)\n",
+    "    \n",
+    "    return random_names\n",
     "\n",
     "\n",
     "get_names(5)"
@@ -133,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -166,59 +171,59 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>81</td>\n",
-       "      <td>98</td>\n",
-       "      <td>53</td>\n",
-       "      <td>60</td>\n",
-       "      <td>82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>78</td>\n",
-       "      <td>75</td>\n",
-       "      <td>86</td>\n",
-       "      <td>84</td>\n",
-       "      <td>96</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>59</td>\n",
-       "      <td>79</td>\n",
-       "      <td>99</td>\n",
-       "      <td>57</td>\n",
-       "      <td>59</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>79</td>\n",
-       "      <td>71</td>\n",
-       "      <td>74</td>\n",
-       "      <td>67</td>\n",
-       "      <td>75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>鄧哲榮</th>\n",
+       "      <td>52</td>\n",
        "      <td>88</td>\n",
-       "      <td>68</td>\n",
-       "      <td>75</td>\n",
-       "      <td>63</td>\n",
+       "      <td>82</td>\n",
+       "      <td>81</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>李湘婷</th>\n",
+       "      <td>64</td>\n",
+       "      <td>84</td>\n",
+       "      <td>72</td>\n",
+       "      <td>90</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>王明昇</th>\n",
+       "      <td>88</td>\n",
+       "      <td>96</td>\n",
        "      <td>62</td>\n",
+       "      <td>99</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>白美珍</th>\n",
+       "      <td>77</td>\n",
+       "      <td>70</td>\n",
+       "      <td>52</td>\n",
+       "      <td>97</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>鄧亭聿</th>\n",
+       "      <td>95</td>\n",
+       "      <td>90</td>\n",
+       "      <td>88</td>\n",
+       "      <td>86</td>\n",
+       "      <td>86</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   國文  英文  數學  地理  探討\n",
-       "0  81  98  53  60  82\n",
-       "1  78  75  86  84  96\n",
-       "2  59  79  99  57  59\n",
-       "3  79  71  74  67  75\n",
-       "4  88  68  75  63  62"
+       "     國文  英文  數學  地理  探討\n",
+       "鄧哲榮  52  88  82  81  53\n",
+       "李湘婷  64  84  72  90  65\n",
+       "王明昇  88  96  62  99  99\n",
+       "白美珍  77  70  52  97  88\n",
+       "鄧亭聿  95  90  88  86  86"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,9 +233,47 @@
     "\n",
     "student_nums = 5\n",
     "data = np.random.randint(50,high=101,size=(student_nums, 5))\n",
-    "students = pd.DataFrame(data,\n",
-    "             columns=['國文','英文','數學','地理','探討'])\n",
+    "students = pd.DataFrame(data, \n",
+    "            columns=['國文','英文','數學','地理','探討'], \n",
+    "            index=get_names(student_nums))\n",
     "students"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "csv存檔成功\n"
+     ]
+    }
+   ],
+   "source": [
+    "students.to_csv(\"student.csv\")\n",
+    "print(\"csv存檔成功\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xlsx存檔成功\n"
+     ]
+    }
+   ],
+   "source": [
+    "import openpyxl\n",
+    "students.to_excel(\"student.xlsx\")\n",
+    "print(\"xlsx存檔成功\")"
    ]
   }
  ],
