--- a/lesson5_4.ipynb
+++ b/lesson5_4.ipynb
@@ -2,143 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[67, 94, 65],\n",
-       "       [78, 92, 68],\n",
-       "       [59, 92, 87]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "students = np.array([\n",
-    "    [67, 94, 65],\n",
-    "    [78, 92, 68],\n",
-    "    [59, 92, 87]\n",
-    "    ])\n",
-    "students"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>國文</th>\n",
-       "      <th>英文</th>\n",
-       "      <th>數學</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>stu1</th>\n",
-       "      <td>67</td>\n",
-       "      <td>94</td>\n",
-       "      <td>65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>stu2</th>\n",
-       "      <td>78</td>\n",
-       "      <td>92</td>\n",
-       "      <td>68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>stu3</th>\n",
-       "      <td>59</td>\n",
-       "      <td>92</td>\n",
-       "      <td>87</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      國文  英文  數學\n",
-       "stu1  67  94  65\n",
-       "stu2  78  92  68\n",
-       "stu3  59  92  87"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "pd.DataFrame(data=students,\n",
-    "             index=['stu1','stu2','stu3'],\n",
-    "             columns=['國文','英文','數學']\n",
-    "             )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['黃婷婷', '彭偉妃', '錢佩豪', '黃翔杰', '沈心利']"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import random\n",
-    "\n",
-    "def get_names(nums:int=10)->list[str]:\n",
-    "    with open(\"names.txt\", encoding=\"utf-8\") as file:\n",
-    "        content = file.read()\n",
-    "        #print(content)\n",
-    "        names = content.split(\"\\n\")\n",
-    "        random_names = random.sample(names, nums)\n",
-    "        #print(random_names)\n",
-    "    \n",
-    "    return random_names\n",
-    "\n",
-    "\n",
-    "get_names(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -628,57 +492,18 @@
        "龔姵君   99  57   75   71   76"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
-    "student_nums = 50\n",
-    "data = np.random.randint(50,high=101,size=(student_nums, 5))\n",
-    "students = pd.DataFrame(data, \n",
-    "            columns=['國文','英文','數學','地理','探討'], \n",
-    "            index=get_names(student_nums))\n",
-    "students"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "csv存檔成功\n"
-     ]
-    }
-   ],
-   "source": [
-    "students.to_csv(\"student.csv\")\n",
-    "print(\"csv存檔成功\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "xlsx存檔成功\n"
-     ]
-    }
-   ],
-   "source": [
-    "import openpyxl\n",
-    "students.to_excel(\"student.xlsx\")\n",
-    "print(\"xlsx存檔成功\")"
+    "df = pd.read_csv(\"student.csv\", index_col=0)\n",
+    "df\n",
+    "\n",
+    "#print(df.head())"
    ]
   }
  ],
