--- a/lesson5_4.ipynb
+++ b/lesson5_4.ipynb
@@ -2,7 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"student.csv\", index_col=0)\n",
+    "df\n",
+    "\n",
+    "#print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -492,18 +506,369 @@
        "龔姵君   99  57   75   71   76"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "df = pd.read_excel(\"student.xlsx\", index_col= 0)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 透過欄選取\n",
+    "- 透過列選取"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 透過欄選取\n",
+    "# 單欄選取\n",
+    "df [\"國文\"]  # 一維資料Series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 多欄選取\n",
+    "df [[\"國文\", \"數學\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>國文</th>\n",
+       "      <th>英文</th>\n",
+       "      <th>數學</th>\n",
+       "      <th>地理</th>\n",
+       "      <th>探討</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>林建宏</th>\n",
+       "      <td>54</td>\n",
+       "      <td>98</td>\n",
+       "      <td>58</td>\n",
+       "      <td>57</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>溫法堯</th>\n",
+       "      <td>81</td>\n",
+       "      <td>58</td>\n",
+       "      <td>94</td>\n",
+       "      <td>59</td>\n",
+       "      <td>98</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     國文  英文  數學  地理  探討\n",
+       "林建宏  54  98  58  57  75\n",
+       "溫法堯  81  58  94  59  98"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# loc -> 使用索引的名稱\n",
+    "# iloc -> 使用索引的 index\n",
     "\n",
-    "df = pd.read_csv(\"student.csv\", index_col=0)\n",
-    "df\n",
-    "\n",
-    "#print(df.head())"
+    "df.loc[\"林建宏\"]\n",
+    "df.loc[[\"林建宏\", \"溫法堯\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>國文</th>\n",
+       "      <th>英文</th>\n",
+       "      <th>數學</th>\n",
+       "      <th>地理</th>\n",
+       "      <th>探討</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>林建宏</th>\n",
+       "      <td>54</td>\n",
+       "      <td>98</td>\n",
+       "      <td>58</td>\n",
+       "      <td>57</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>溫法堯</th>\n",
+       "      <td>81</td>\n",
+       "      <td>58</td>\n",
+       "      <td>94</td>\n",
+       "      <td>59</td>\n",
+       "      <td>98</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     國文  英文  數學  地理  探討\n",
+       "林建宏  54  98  58  57  75\n",
+       "溫法堯  81  58  94  59  98"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[16]\n",
+    "df.iloc[[16, 20]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>國文</th>\n",
+       "      <th>英文</th>\n",
+       "      <th>數學</th>\n",
+       "      <th>地理</th>\n",
+       "      <th>探討</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>林建宏</th>\n",
+       "      <td>54</td>\n",
+       "      <td>98</td>\n",
+       "      <td>58</td>\n",
+       "      <td>57</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>方雅慧</th>\n",
+       "      <td>59</td>\n",
+       "      <td>91</td>\n",
+       "      <td>76</td>\n",
+       "      <td>51</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>簡國瑋</th>\n",
+       "      <td>99</td>\n",
+       "      <td>74</td>\n",
+       "      <td>72</td>\n",
+       "      <td>54</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>黃嘉琪</th>\n",
+       "      <td>66</td>\n",
+       "      <td>75</td>\n",
+       "      <td>84</td>\n",
+       "      <td>55</td>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>溫法堯</th>\n",
+       "      <td>81</td>\n",
+       "      <td>58</td>\n",
+       "      <td>94</td>\n",
+       "      <td>59</td>\n",
+       "      <td>98</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     國文  英文  數學  地理  探討\n",
+       "林建宏  54  98  58  57  75\n",
+       "方雅慧  59  91  76  51  60\n",
+       "簡國瑋  99  74  72  54  60\n",
+       "黃嘉琪  66  75  84  55  66\n",
+       "溫法堯  81  58  94  59  98"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[\"林建宏\":\"溫法堯\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>國文</th>\n",
+       "      <th>英文</th>\n",
+       "      <th>數學</th>\n",
+       "      <th>地理</th>\n",
+       "      <th>探討</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>林建宏</th>\n",
+       "      <td>54</td>\n",
+       "      <td>98</td>\n",
+       "      <td>58</td>\n",
+       "      <td>57</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>方雅慧</th>\n",
+       "      <td>59</td>\n",
+       "      <td>91</td>\n",
+       "      <td>76</td>\n",
+       "      <td>51</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>簡國瑋</th>\n",
+       "      <td>99</td>\n",
+       "      <td>74</td>\n",
+       "      <td>72</td>\n",
+       "      <td>54</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>黃嘉琪</th>\n",
+       "      <td>66</td>\n",
+       "      <td>75</td>\n",
+       "      <td>84</td>\n",
+       "      <td>55</td>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     國文  英文  數學  地理  探討\n",
+       "林建宏  54  98  58  57  75\n",
+       "方雅慧  59  91  76  51  60\n",
+       "簡國瑋  99  74  72  54  60\n",
+       "黃嘉琪  66  75  84  55  66"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[16:20]"
    ]
   }
  ],
