--- a/lesson6_1.ipynb
+++ b/lesson6_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -2326,7 +2326,7 @@
     "</html>\n",
     "'''\n",
     "\n",
-    "soup = BeautifulSoup(html, \"html.parser\")\n",
+    "soup = BeautifulSoup(html, \"html.parser\") # HTML 解析器\n",
     "h1_element = soup.h1\n",
     "print(1., type(h1_element)) # 取得元素的類型\n",
     "print(2., h1_element.attrs) # 獲取元素的屬性\n",
